--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 <body>
 
     <div class="navbar">
-        <a class="active" href="#"><i class="fa fa-water fa-home"></i> Home</a>
-        <a href="#"><i class="fas fa-sun fa-search fa-spin"></i> Search</a>
-        <a href="#"><i class="fas fa-fish"></i> Food</a>
-        <a href="#"><i class="fas fa-umbrella-beach"></i> Login</a>
-        <a class="active" href="#"><i class="fa fa-water fa-stay"></i> Stay</a>
+        <a href="#"><i class="fa fa-water fa-home"></i> Home</a>
+        <a href="#"><i class="fas fa-sun fa-search fa-spin"></i> Fun</a>
+        <a href="#"><i class="fas fa-fish"></i> Eat</a>
+        <a href="#"><i class="fa fa-calendar-check"></i> Time</a>
+        <a href="#"><i class="fas fa-umbrella-beach"></i> Stay</a>
+        <a href="#"><i class="fa fa-hospital"></i> ICE</a>
     </div>
 
     <!-- MAIN SECTION -->
@@ -35,6 +36,12 @@
     </div>
 
 
+    <!-- FOOTER -->
+    <footer>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d202739.72169112545!2d-117.26589503179886!3d32.73451914788911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9530fad921e4b%3A0xd3a21fdfd15df79!2sSan%20Diego%2C%20CA!5e0!3m2!1sen!2sus!4v1646610271667!5m2!1sen!2sus"
+            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </footer>
 
 
 
