href links add pages

--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
         <a href="#"><i class="fa fa-calendar-check"></i> Time</a>
         <a href="#"><i class="fas fa-umbrella-beach"></i> Stay</a>
         <a href="#"><i class="fa fa-hospital"></i> ICE</a>
+        <a href="pages/ME.html"><i class="fa fa-user"></i> ME</a>
+        <a href="pages/Why.html"><i class="fa fa-graduation-cap"></i> Why</a>
     </div>
+
 
     <!-- MAIN SECTION -->
     <main class="main-section">
 
     </main>
 
-    <div>
-        <h3>Family</h3>
-    </div>
+
 
 
     <!-- FOOTER -->
