--- a/me/ME.html
+++ b/me/ME.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ME</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="MECSS.css">
+    <link rel="stylesheet" href="../me/MECSS.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,87 +17,105 @@
 </head>
 
 <body>
-
-    <div class="navbar">
-        <a href="../index.html"><i class="fa fa-water fa-home"></i> Home</a>
-        <a href="#"><i class="fas fa-sun fa-search"></i> Fun</a>
-        <a href="#"><i class="fas fa-fish"></i> Eat</a>
-        <a href="#"><i class="fa fa-calendar-check"></i> Time</a>
-        <a href="#"><i class="fas fa-umbrella-beach"></i> Stay</a>
-        <a href="#"><i class="fa fa-hospital"></i> ICE</a>
-        <a href="pages/ME.html"><i class="fa fa-user"></i> ME</a>
-    </div>
-
-
     <!-- Grid -->
     <div class="grid-container">
         <!-- Header -->
         <header class="header-container">
             <!-- Navigation -->
             <nav>
-                <img class="logo-position" src="assets/tech-moms-logo.PNG" alt="Tech-Moms" width="130px">
+                <!-- <img class="logo-position" src="assets/tech-moms-logo.PNG" alt="Tech-Moms" width="130px"> -->
                 <div class="header-flex">
-                    <a href="#">1</a>
-                    <a href="#">2</a>
-                    <a href="#">3</a>
-                    <a href="#">4</a>
+                    <a href="../index.html"><i class="fa fa-water fa-home"></i> Home</a>
+                    <!-- <a href="#"><i class="fas fa-sun fa-search"></i> Fun</a> -->
+                    <!-- <a href="#"><i class="fas fa-fish"></i> Eat</a> -->
+                    <!-- <a href="#"><i class="fa fa-calendar-check"></i> Time</a> -->
+                    <!-- <a href="#"><i class="fas fa-umbrella-beach"></i> Stay</a> -->
+                    <!-- <a href="#"><i class="fa fa-hospital"></i> ICE</a> -->
+                    <a href="pages/ME.html"><i class="fa fa-user"></i> ME</a>
                 </div>
             </nav>
         </header>
 
         <!-- SECTION SECTION -->
         <section class="main-container">
-            <!-- This section is displaying our image that we set in the CSS -->
+            <img src="../Assets/fakepic.JPG" alt="Not me" class="center">
         </section>
 
         <!-- SIDEBAR -->
         <aside class="sidebar-container">
-            <div class="sidebar-accent">#</div>
-            <div class="sidebar-title">About Me</div>
+            <div class="sidebar-title">Who am I?</div>
 
             <div class="sidebar-tagline">
+                <h5> Hi, I'm Lindsie</h5>
                 <p>1</p>
                 <p>2</p>
                 <p>3</p>
             </div>
 
-            <div class="btn-spacing">
-                <button class="sidebar-btn">
-                    <div class="btn-flex">
-                        <div>Resume</div>
-                        <i class="fas fa-arrow-right"></i>
+            <div class="icons-flex">
+                <a href="https://www.facebook.com/lindsie.fitzgerald/" target="_blank">
+                    <i class=" fab fa-facebook-square fa-3x square"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/lindsie-fitzgerald-a27675166/" target="_blank">
+                    <i class=" fab fa-linkedin fa-3x square"></i>
+                </a>
+                <a href="https://www.instagram.com/lindsiefitz/" target="_blank">
+                    <div class=" insta-box">
+                        <i class="fab fa-instagram fa-2x insta"></i>
                     </div>
-                </button>
-            </div>
+                </a>
 
+                <div class="btn-spacing">
+                    <button class="sidebar-btn">
+                        <div class="btn-flex">
+                            <div>Resumé</div>
+                            <i class="fas fa-arrow-right"></i>
+                        </div>
+                    </button>
+                </div>
+            </div>
         </aside>
 
+        <hr>
 
 
-        <!-- Footer -->
+        <!-- WHY -->
         <footer class="footer-container">
             <div class="footer-flex">
-                <div class="icons-flex">
-                    <a href="https://www.facebook.com/groups/515557616086129">
-                        <i class="fab fa-facebook-square fa-3x square"></i>
-                    </a>
-                    <a href="https://www.linkedin.com/company/tech-moms/">
-                        <i class="fab fa-linkedin fa-3x square"></i>
-                    </a>
-                    <a href="https://www.instagram.com/tech.moms/">
-                        <div class="insta-box">
-                            <i class="fab fa-instagram fa-2x insta"></i>
-                        </div>
-                    </a>
-                </div>
-
                 <div>
-                    Copyright 2022, all rights reserved
+                    Why did I do this?
                 </div>
             </div>
         </footer>
-    </div>
 
+        <div class="box box1">
+            <div class="nested"><img src="../Assets/fakepic.JPG" alt="Not me" class="center"></div>
+            <h4>family</h4>
+        </div>
+        <div class="box box2">
+            <div class="nested"></div><img src="../Assets/fakepic.JPG" alt="Not me" class="center">
+            <h4>family</h4>
+        </div>
+        <div class="box box3">
+            <div class="nested"></div><img src="../Assets/fakepic.JPG" alt="Not me" class="center">
+            <h4>family</h4>
+        </div>
+        <div class="box box4"></div>
+
+
+        <!-- WHY -->
+        <footer class="last-container">
+            <div class="last-flex">
+                <div>
+                    <a href="http://www.slcc.edu/continuinged/programs/web-dev.aspx" target="_blank" class="last">Now
+                        what?</a>
+                </div>
+            </div>
+        </footer>
+
+
+
+    </div>
 
 
 
