--- a/home.html
+++ b/home.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Z INDEX</title>
+    <title>HOME</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="../SAMPLES/zstyle.css">
+    <link rel="stylesheet" href="../portfolio/home.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,8 +24,10 @@
 <body>
     <!-- Grid -->
     <div class="grid-container">
-        <img src="../Assets/Lets Go!.png">
-        <h1>Let's Go: San Diego, CA</h1>
+        <div class="top-container">
+            <h1>Let's Go: San Diego, CA </h1>
+            <img src="../portfolio/Assets/logo.png" alt="logo">
+        </div>
 
         <div class="navbar">
             <a href="#"><i class="fa fa-water fa-home"></i> Home</a>
@@ -36,30 +38,25 @@
             <a href="#"><i class="fa fa-hospital"></i> ICE</a>
             <a href="me/ME.html"><i class="fa fa-user"></i> ME</a>
         </div>
+        <br>
 
-        <div class="slider">
-            <div class="images">
-                <input type="radio" name="slide" id="img1" checked>
-                <input type="radio" name="slide" id="img2">
-                <input type="radio" name="slide" id="img3">
-                <input type="radio" name="slide" id="img4">
-
-                <img src="../Assets/InkedIMG_86441.jpg" class="m1" alt="img1">
-                <img src="../Assets/InkedIMG_86442.jpg" class="m2" alt="img2">
-                <img src="../Assets/InkedIMG_86443.jpg" class="m3" alt="img3">
-                <img src="../Assets/InkedIMG_86444.jpg" class="m4" alt="img4">
-            </div>
-            <div class="dots">
-                <label for="img1"></label>
-                <label for="img2"></label>
-                <label for="img3"></label>
-                <label for="img4"></label>
+        <div class="picrow1">
+            <div>
+                <img src="../portfolio/Assets/row1.jpg" class="center">
             </div>
         </div>
 
+        <div class="picrow2">
+            <div>
+                <img src="../portfolio/Assets/row2.jpg" class="center">
+            </div>
+        </div>
 
-
-
+        <div class="picrow3">
+            <div>
+                <img src="../portfolio/Assets/row3.jpg" class="center">
+            </div>
+        </div>
 
     </div>
 
