--- a/me/ME.html
+++ b/me/ME.html
@@ -64,6 +64,9 @@
                         <i class="fab fa-instagram fa-2x insta"></i>
                     </div>
                 </a>
+                <a href="https://github.com/lindsiefitz?tab=repositories/" target="_blank">
+                    <i class=" fab fa-brands fa-github-square fa-3x square"></i>
+                </a>
 
                 <div class="btn-spacing">
                     <button class="sidebar-btn">
@@ -90,15 +93,15 @@
 
         <div class="box box1">
             <div class="nested"><img src="../Assets/fakepic.JPG" alt="Not me" class="center"></div>
-            <h4>family</h4>
+            <h4>1</h4>
         </div>
         <div class="box box2">
             <div class="nested"></div><img src="../Assets/fakepic.JPG" alt="Not me" class="center">
-            <h4>family</h4>
+            <h4>2</h4>
         </div>
         <div class="box box3">
             <div class="nested"></div><img src="../Assets/fakepic.JPG" alt="Not me" class="center">
-            <h4>family</h4>
+            <h4>3</h4>
         </div>
         <div class="box box4"></div>
 
@@ -107,7 +110,8 @@
         <footer class="last-container">
             <div class="last-flex">
                 <div>
-                    <a href="http://www.slcc.edu/continuinged/programs/web-dev.aspx" target="_blank" class="last">Now
+                    <a class="nav-link" href="http://www.slcc.edu/continuinged/programs/web-dev.aspx" target="_blank"
+                        class="last">Now
                         what?</a>
                 </div>
             </div>
