--- a/index.html
+++ b/index.html
@@ -5,46 +5,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>San Diego</title>
+    <title>HOME</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../portfolio/style.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@300&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <!-- Grid -->
+    <div class="grid-container">
+        <div class="top-container">
+            <h1>Let's Go: San Diego, CA </h1>
+            <img src="../portfolio/Assets/logo.png" alt="logo">
+        </div>
 
-    <h1>San Diego, California</h1>
+        <div class="navbar">
+            <a href="#"><i class="fa fa-water fa-home"></i> Home</a>
+            <a href="#"><i class="fas fa-sun fa-search"></i> Fun</a>
+            <a href="#"><i class="fas fa-fish"></i> Eat</a>
+            <a href="#"><i class="fa fa-calendar-check"></i> Time</a>
+            <a href="#"><i class="fas fa-umbrella-beach"></i> Stay</a>
+            <a href="#"><i class="fa fa-hospital"></i> ICE</a>
+            <a href="me/ME.html"><i class="fa fa-user"></i> ME</a>
+        </div>
+        <br>
 
-    <div class="navbar">
-        <a href="#"><i class="fa fa-water fa-home"></i> Home</a>
-        <a href="#"><i class="fas fa-sun fa-search"></i> Fun</a>
-        <a href="#"><i class="fas fa-fish"></i> Eat</a>
-        <a href="#"><i class="fa fa-calendar-check"></i> Time</a>
-        <a href="#"><i class="fas fa-umbrella-beach"></i> Stay</a>
-        <a href="#"><i class="fa fa-hospital"></i> ICE</a>
-        <a href="me/ME.html"><i class="fa fa-user"></i> ME</a>
+        <div class="picrow1">
+            <div>
+                <img src="../portfolio/Assets/row1.jpg" class="center">
+            </div>
+        </div>
+
+        <div class="picrow2">
+            <div>
+                <img src="../portfolio/Assets/row2.jpg" class="center">
+            </div>
+        </div>
+
+        <div class="picrow3">
+            <div>
+                <img src="../portfolio/Assets/row3.jpg" class="center">
+            </div>
+        </div>
+
     </div>
-
-
-    <!-- MAIN SECTION -->
-    <main class="main-section-1">
-    </main>
-
-    <hr>
-    <main class="main-section-2"></main>
-
-    <!-- FOOTER MAP -->
-    <footer>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d202739.72169112545!2d-117.26589503179886!3d32.73451914788911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9530fad921e4b%3A0xd3a21fdfd15df79!2sSan%20Diego%2C%20CA!5e0!3m2!1sen!2sus!4v1646610271667!5m2!1sen!2sus"
-            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </footer>
-
 
 
 
