--- a/me/ME.html
+++ b/me/ME.html
@@ -92,16 +92,16 @@
         </footer>
 
         <div class="box box1">
-            <div class="nested"><img src="../Assets/fakepic.JPG" alt="Not me" class="center"></div>
-            <h4>1</h4>
+            <div class="nested"><img src="../Assets/family.JPG" alt="family" class="center"></div>
+            <h4>Myself & My Family</h4>
         </div>
         <div class="box box2">
-            <div class="nested"></div><img src="../Assets/fakepic.JPG" alt="Not me" class="center">
-            <h4>2</h4>
+            <div class="nested"></div><img src="../Assets/goals.jpg" alt="goals" class="center">
+            <h4>Goals</h4>
         </div>
         <div class="box box3">
-            <div class="nested"></div><img src="../Assets/fakepic.JPG" alt="Not me" class="center">
-            <h4>3</h4>
+            <div class="nested"></div><img src="../Assets/carvacay.jpg" alt="car" class="center">
+            <h4>$$$</h4>
         </div>
         <div class="box box4"></div>
 
@@ -111,8 +111,7 @@
             <div class="last-flex">
                 <div>
                     <a class="nav-link" href="http://www.slcc.edu/continuinged/programs/web-dev.aspx" target="_blank"
-                        class="last">Now
-                        what?</a>
+                        class="last">Now what?</a>
                 </div>
             </div>
         </footer>
