--- a/SAMPLES/home.html
+++ b/SAMPLES/home.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let's Go: San Diego</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="../portfolio/style.css">
+    <link rel="stylesheet" href="../SAMPLES/home.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +31,7 @@
 
         <div class="navbar">
             <a href="#"><i class="fa fa-water fa-home"></i> Home</a>
-            <a href="../portfolio/fun.html"><i class="fas fa-sun fa-search"></i> Fun</a>
+            <a href="#"><i class="fas fa-sun fa-search"></i> Fun</a>
             <a href="#"><i class="fas fa-fish"></i> Eat</a>
             <a href="#"><i class="fa fa-calendar-check"></i> Time</a>
             <a href="#"><i class="fas fa-umbrella-beach"></i> Stay</a>
