fun and all pages

--- a/fun.html
+++ b/fun.html
@@ -23,63 +23,170 @@
         <header class="header-container">
             <!-- Navigation -->
             <nav>
-                <!-- <img class="logo-position" src="assets/tech-moms-logo.PNG" alt="Tech-Moms" width="130px"> -->
-                <div class="header-flex">
+                <div class="navbar">
                     <a href="../portfolio/index.html"><i class="fa fa-water fa-home"></i> Home</a>
                     <!-- <a href="#"><i class="fas fa-sun fa-search"></i> Fun</a> -->
-                    <a href="#"><i class="fas fa-fish"></i> Eat</a>
-                    <a href="#"><i class="fa fa-calendar-check"></i> Time</a>
-                    <a href="#"><i class="fas fa-umbrella-beach"></i> Stay</a>
-                    <a href="#"><i class="fa fa-hospital"></i> ICE</a>
-                    <a href="pages/ME.html"><i class="fa fa-user"></i> ME</a>
+                    <a href="../portfolio/eat.html"><i class="fas fa-fish"></i> Eat</a>
+                    <a href="../portfolio/time.html"><i class="fa fa-calendar-check"></i> Time</a>
+                    <a href="../portfolio/stay.html"><i class="fas fa-umbrella-beach"></i> Stay</a>
+                    <a href="../portfolio/ice.html"><i class="fa fa-hospital"></i> ICE</a>
+                    <a href="../portfolio/ME.html"><i class="fa fa-user"></i> ME</a>
                 </div>
             </nav>
         </header>
 
         <!-- SECTION SECTION -->
         <div class="fundisc">
-            <p> This is our idea of fun! Click on each picture to be taken to the mentioned website</p>
+            <p> This is our idea of fun! Click on each picture to be taken to the mentioned website.</p>
         </div>
 
         <div class="box box1">
-            <img src="../portfolio/Assets/IMG_8644.JPG" alt="Sea World" class="center">
+            <a href="https://seaworld.com/san-diego/" target="_blank">
+                <img src="../portfolio/Assets/IMG_8644.JPG" alt="Sea World" class="center">
+            </a>
         </div>
 
         <div class="box box2">
             <h4>Sea World</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam suscipit explicabo in aut, fugiat qui
-                architecto doloribus similique vero rerum?</p>
+            <ul>
+                <li>“Journey of Atlantis at Seaworld is one of best rides ever!” -Dustin </li>
+                <li>"I like to watch the orca whales splash. I really want to go there again." -Jax </li>
+                <li>“I love taking my kids to Sea World! Perfect blend of marine education and entertainment!” -Brittany
+                </li>
+                <li>“Sea lion show with everybody.” -Kailee </li>
+                <li>“My favorite are the rides Journey to Atlantis and the Manta. Both are really fun and give you a
+                    little bit of adrenaline but not too much.” -Kelsie </li>
+            </ul>
         </div>
 
         <div class="box box3">
             <h4>San Diego Zoo</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam suscipit explicabo in aut, fugiat qui
-                architecto doloribus similique vero rerum?</p>
+            <ul>
+                <li>“There is so many amazing and different animals at the San Diego Zoo that’s why I love it and I also
+                    like riding on the top of the double decker bus there.” -Kelsie </li>
+                <li>“Seeing the jaguar.” -Kailee </li>
+                <li>“The baby hippo and pandas were so adorable! Inside look and early morning tours are worth every
+                    penny.” -Lindsie </li>
+                <li>“San Diego Zoo is an amazing combination of native and exotic animals as well as beautiful flora to
+                    capture the interest of all ages! My favorite part is the tour bus which allow visitors to board at
+                    any given spot for a close up look at the animals.” -Joni </li>
+            </ul>
         </div>
 
         <div class="box box4">
-            <img src="../portfolio/Assets/IMG_8644.JPG" alt="Zoo" class="center">
+            <a href="https://zoo.sandiegozoo.org/" target="_blank">
+                <img src="../portfolio/Assets/IMG_8644.JPG" alt="SD Zoo" class="center">
+            </a>
         </div>
 
         <div class="box box5">
-            <img src="../portfolio/Assets/IMG_8644.JPG" alt="#" class="center">
+            <a href="https://www.sandiego.org/explore/things-to-do/beaches-bays/mission-beach.aspx" target="_blank">
+                <img src="../portfolio/Assets/IMG_8644.JPG" alt="Mission Beach" class="center">
+            </a>
         </div>
 
         <div class="box box6">
             <h4>Mission Beach</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos exercitationem porro animi
-                quibusdam sed molestiae odit cumque maiores beatae natus.</p>
+            <ul>
+                <li>“There are so many fun things to do there play in the sand, hang out with family, watch the gorgeous
+                    view, but my favorite is to just play in the water.” -Kelsie </li>
+                <li>“Mission Beach is the perfect vacation spot to escape every day life and stress. Sunrise and sunset
+                    at Mission Beach have my heart!” - Brittany </li>
+                <li>“Waking up, coffee and ocean watching surfers and occasionally dolphins. Plus nonstop entertainment
+                    of the boardwalk.” - Lindsie </li>
+                <li>“My favorite memories of Mission Beach in beautiful San Diego, are the stunning sunrises and
+                    sunsets. Visitors can count on gorgeous colors in the skies, usually reflected in the ocean waters.
+                    Listening to the waves crash on the amazing beach sands add to the experience!” -Joni </li>
+            </ul>
         </div>
 
         <div class="box box7">
             <h4>USS Midway</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam suscipit explicabo in aut, fugiat qui
-                architecto doloribus similique vero rerum?</p>
+            <ul>
+                <li>“My favorite thing there was learning about all the cool military things they had but watching top
+                    gun was cool too.” -Kelsie </li>
+            </ul>
         </div>
 
         <div class="box box8">
-            <img src="../portfolio/Assets/IMG_8644.JPG" alt="Zoo" class="center">
+            <a href="https://www.midway.org/" target="_blank">
+                <img src="../portfolio/Assets/IMG_8644.JPG" alt="USS Midway" class="center">
+            </a>
         </div>
+
+        <div class="box box9">
+            <a href="https://sdwhalewatch.com/" target="_blank">
+                <img src="../portfolio/Assets/IMG_8644.JPG" alt="Whale Watch" class="center">
+            </a>
+        </div>
+
+        <div class="box box10">
+            <h4>Whale Watching Tour</h4>
+            <ul>
+                <li>“I thought it was really cool to see the whales and dolphins in their natural habitats and riding on
+                    the rocking boat was fun but my mom and grandma probably wouldn’t agree.” -Kelsie </li>
+            </ul>
+        </div>
+
+        <div class="box box11">
+            <h4>Kayaking</h4>
+            <ul>
+                <li>Kayaking and watching fins come out of the water towards me. It turned out to be a dolphin! - Dustin
+                </li>
+                <li>“FREAKING DOLPHINS.” -Kailee</li>
+                <li>“The views were pretty and coming back to shore was fun but every thing else sucked.” -Kelsie</li>
+            </ul>
+        </div>
+
+        <div class="box box12">
+            <a href="https://www.lajollaseacavekayaks.com/" target="_blank">
+                <img src="../portfolio/Assets/IMG_8644.JPG" alt="Kayak Tour" class="center">
+            </a>
+        </div>
+
+        <div class="box box13">
+            <a href="https://lajolla.com/article/la-jolla-tide-pools-complete-guide/" target="_blank">
+                <img src="../portfolio/Assets/IMG_8644.JPG" alt="Tide Pools" class="center">
+            </a>
+        </div>
+
+        <div class="box box14">
+            <h4>La Jolla Tide Pools</h4>
+            <ul>
+                <li>“Seeing a little crab.” -Kailee</li>
+                <li>“I really liked looking at all the little sea life in the tide pool.” -Kelsie</li>
+            </ul>
+        </div>
+
+        <div class="box box15">
+            <h4>Children’s pool</h4>
+            <ul>
+                <li>“The water is really pretty and I like watching the sea lions.” -Kelsie</li>
+                <li>“Seeing the Dr Seuss house.” -Kailee</li>
+            </ul>
+        </div>
+
+        <div class="box box16">
+            <a href="https://lajollamom.com/childrens-pool-beach-la-jolla/" target="_blank">
+                <img src="../portfolio/Assets/IMG_8644.JPG" alt="Childrens Pool" class="center">
+            </a>
+        </div>
+
+        <div class="box box17">
+            <a href="https://www.belmontpark.com/" target="_blank">
+                <img src="../portfolio/Assets/IMG_8644.JPG" alt="Belmont" class="center">
+            </a>
+        </div>
+
+        <div class="box box18">
+            <h4>Belmont Park</h4>
+            <ul>
+                <li>“I love going on the rides there especially the giant dipper roller coaster and the arcade is really
+                    fun too.” -Kelsie</li>
+                <li>“Just hanging out with Kels.” -Kailee</li>
+            </ul>
+        </div>
+
 
 
 
