--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         </div>
 
         <div class="navbar">
-            <a href="#"><i class="fa fa-water fa-home"></i> Home</a>
+            <a href="../portfolio/index.html"><i class="fa fa-water fa-home"></i> Home</a>
             <a href="../portfolio/fun.html"><i class="fas fa-sun fa-search"></i> Fun</a>
-            <a href="#"><i class="fas fa-fish"></i> Eat</a>
-            <a href="#"><i class="fa fa-calendar-check"></i> Time</a>
-            <a href="#"><i class="fas fa-umbrella-beach"></i> Stay</a>
-            <a href="#"><i class="fa fa-hospital"></i> ICE</a>
-            <a href="me/ME.html"><i class="fa fa-user"></i> ME</a>
+            <a href="../portfolio/eat.html"><i class="fas fa-fish"></i> Eat</a>
+            <a href="../portfolio/time.html"><i class="fa fa-calendar-check"></i> Time</a>
+            <a href="../portfolio/stay.html"><i class="fas fa-umbrella-beach"></i> Stay</a>
+            <a href="../portfolio/ice.html"><i class="fa fa-hospital"></i> ICE</a>
+            <a href="../portfolio/ME.html"><i class="fa fa-user"></i> ME</a>
         </div>
         <br>
 
