--- a/ME.html
+++ b/ME.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ME</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="../me/MECSS.css">
+    <link rel="stylesheet" href="../portfolio/MECSS.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,22 +23,21 @@
         <header class="header-container">
             <!-- Navigation -->
             <nav>
-                <!-- <img class="logo-position" src="assets/tech-moms-logo.PNG" alt="Tech-Moms" width="130px"> -->
                 <div class="header-flex">
-                    <a href="../index.html"><i class="fa fa-water fa-home"></i> Home</a>
+                    <a href="../portfolio/index.html"><i class="fa fa-water fa-home"></i> Home</a>
                     <!-- <a href="#"><i class="fas fa-sun fa-search"></i> Fun</a> -->
                     <!-- <a href="#"><i class="fas fa-fish"></i> Eat</a> -->
                     <!-- <a href="#"><i class="fa fa-calendar-check"></i> Time</a> -->
                     <!-- <a href="#"><i class="fas fa-umbrella-beach"></i> Stay</a> -->
                     <!-- <a href="#"><i class="fa fa-hospital"></i> ICE</a> -->
-                    <a href="pages/ME.html"><i class="fa fa-user"></i> ME</a>
+                    <!-- <a href="pages/ME.html"><i class="fa fa-user"></i> ME</a> -->
                 </div>
             </nav>
         </header>
 
         <!-- SECTION SECTION -->
         <section class="main-container">
-            <img src="../Assets/fakepic.JPG" alt="Not me" class="center">
+            <img src="../portfolio/Assets/fakepic.JPG" alt="Not me" class="center">
         </section>
 
         <!-- SIDEBAR -->
@@ -92,15 +91,15 @@
         </footer>
 
         <div class="box box1">
-            <div class="nested"><img src="../Assets/family.JPG" alt="family" class="center"></div>
+            <div class="nested"><img src="../portfolio/Assets/family.JPG" alt="family" class="center"></div>
             <h4>Myself & My Family</h4>
         </div>
         <div class="box box2">
-            <div class="nested"></div><img src="../Assets/goals.jpg" alt="goals" class="center">
+            <div class="nested"></div><img src="../portfolio/Assets/goals.jpg" alt="goals" class="center">
             <h4>Goals</h4>
         </div>
         <div class="box box3">
-            <div class="nested"></div><img src="../Assets/carvacay.jpg" alt="car" class="center">
+            <div class="nested"></div><img src="../portfolio/Assets/carvacay.jpg" alt="car" class="center">
             <h4>$$$</h4>
         </div>
         <div class="box box4"></div>
