me and fun pages

--- a/ME.html
+++ b/ME.html
@@ -37,7 +37,7 @@
 
         <!-- SECTION SECTION -->
         <section class="main-container">
-            <img src="../portfolio/Assets/fakepic.JPG" alt="Not me" class="center">
+            <img src="../portfolio/Assets/me.jpg" alt="Me" class="center">
         </section>
 
         <!-- SIDEBAR -->
@@ -45,10 +45,10 @@
             <div class="sidebar-title">Who am I?</div>
 
             <div class="sidebar-tagline">
-                <h5> Hi, I'm Lindsie</h5>
-                <p>1</p>
-                <p>2</p>
-                <p>3</p>
+                <h3> Hi, I'm Lindsie</h3>
+                <p>I'm a daughter to the most amazing parents ever.</p>
+                <p>I'm a single mom to the coolest kid, 2 dogs & 2 turtles.</p>
+                <p>I'm an employee (same company 21 years).</p>
             </div>
 
             <div class="icons-flex">
@@ -68,12 +68,15 @@
                 </a>
 
                 <div class="btn-spacing">
-                    <button class="sidebar-btn">
-                        <div class="btn-flex">
-                            <div>Resumé</div>
-                            <i class="fas fa-arrow-right"></i>
-                        </div>
-                    </button>
+                    <a href="../portfolio/Assets/My Resume.pdf" target="_blank">
+                        <button class="sidebar-btn">
+                            <div class="btn-flex">
+                                <div>Resumé
+                                </div>
+                                <i class="fas fa-arrow-right"></i>
+                            </div>
+                        </button>
+                    </a>
                 </div>
             </div>
         </aside>
@@ -109,8 +112,8 @@
         <footer class="last-container">
             <div class="last-flex">
                 <div>
-                    <a class="nav-link" href="http://www.slcc.edu/continuinged/programs/web-dev.aspx" target="_blank"
-                        class="last">Now what?</a>
+                    <a class="last" href="http://www.slcc.edu/continuinged/programs/web-dev.aspx" target="_blank">Now
+                        what?</a>
                 </div>
             </div>
         </footer>
