--- a/fun.html
+++ b/fun.html
@@ -42,14 +42,14 @@
 
         <div class="box box1">
             <a href="https://seaworld.com/san-diego/" target="_blank">
-                <img src="../portfolio/Assets/IMG_8644.JPG" alt="Sea World" class="center">
+                <img src="../portfolio/Assets/sea.JPG" alt="Sea World" class="center">
             </a>
         </div>
 
         <div class="box box2">
             <h4>Sea World</h4>
             <ul>
-                <li>“Journey of Atlantis at Seaworld is one of best rides ever!” -Dustin </li>
+                <li>“Journey to Atlantis at Seaworld is one of best rides ever!” -Dustin </li>
                 <li>"I like to watch the orca whales splash. I really want to go there again." -Jax </li>
                 <li>“I love taking my kids to Sea World! Perfect blend of marine education and entertainment!” -Brittany
                 </li>
@@ -75,13 +75,13 @@
 
         <div class="box box4">
             <a href="https://zoo.sandiegozoo.org/" target="_blank">
-                <img src="../portfolio/Assets/IMG_8644.JPG" alt="SD Zoo" class="center">
+                <img src="../portfolio/Assets/zoo.JPG" alt="SD Zoo" class="center">
             </a>
         </div>
 
         <div class="box box5">
             <a href="https://www.sandiego.org/explore/things-to-do/beaches-bays/mission-beach.aspx" target="_blank">
-                <img src="../portfolio/Assets/IMG_8644.JPG" alt="Mission Beach" class="center">
+                <img src="../portfolio/Assets/mission.jpg" alt="Mission Beach" class="center">
             </a>
         </div>
 
@@ -110,13 +110,13 @@
 
         <div class="box box8">
             <a href="https://www.midway.org/" target="_blank">
-                <img src="../portfolio/Assets/IMG_8644.JPG" alt="USS Midway" class="center">
+                <img src="../portfolio/Assets/top2.JPG" alt="USS Midway" class="center">
             </a>
         </div>
 
         <div class="box box9">
             <a href="https://sdwhalewatch.com/" target="_blank">
-                <img src="../portfolio/Assets/IMG_8644.JPG" alt="Whale Watch" class="center">
+                <img src="../portfolio/Assets/whale.JPG" alt="Whale Watch" class="center">
             </a>
         </div>
 
@@ -131,7 +131,7 @@
         <div class="box box11">
             <h4>Kayaking</h4>
             <ul>
-                <li>Kayaking and watching fins come out of the water towards me. It turned out to be a dolphin! - Dustin
+                <li>"Kayaking and watching fins come out of the water towards me. It turned out to be a dolphin!" - Dustin
                 </li>
                 <li>“FREAKING DOLPHINS.” -Kailee</li>
                 <li>“The views were pretty and coming back to shore was fun but every thing else sucked.” -Kelsie</li>
@@ -140,13 +140,13 @@
 
         <div class="box box12">
             <a href="https://www.lajollaseacavekayaks.com/" target="_blank">
-                <img src="../portfolio/Assets/IMG_8644.JPG" alt="Kayak Tour" class="center">
+                <img src="../portfolio/Assets/kayak.jpg" alt="Kayak Tour" class="center">
             </a>
         </div>
 
         <div class="box box13">
             <a href="https://lajolla.com/article/la-jolla-tide-pools-complete-guide/" target="_blank">
-                <img src="../portfolio/Assets/IMG_8644.JPG" alt="Tide Pools" class="center">
+                <img src="../portfolio/Assets/tide.JPG" alt="Tide Pools" class="center">
             </a>
         </div>
 
@@ -168,13 +168,13 @@
 
         <div class="box box16">
             <a href="https://lajollamom.com/childrens-pool-beach-la-jolla/" target="_blank">
-                <img src="../portfolio/Assets/IMG_8644.JPG" alt="Childrens Pool" class="center">
+                <img src="../portfolio/Assets/childrens.JPG" alt="Childrens Pool" class="center">
             </a>
         </div>
 
         <div class="box box17">
             <a href="https://www.belmontpark.com/" target="_blank">
-                <img src="../portfolio/Assets/IMG_8644.JPG" alt="Belmont" class="center">
+                <img src="../portfolio/Assets/belmont.JPG" alt="Belmont" class="center">
             </a>
         </div>
 
