--- a/ME.html
+++ b/ME.html
@@ -37,7 +37,7 @@
 
         <!-- SECTION SECTION -->
         <section class="main-container">
-            <img src="../portfolio/Assets/me.jpg" alt="Me" class="center">
+            <img class="smaller-image" src="../portfolio/Assets/me.jpg" alt="Me" class="center">
         </section>
 
         <!-- SIDEBAR -->
