--- a/fun.html
+++ b/fun.html
@@ -131,7 +131,8 @@
         <div class="box box11">
             <h4>Kayaking</h4>
             <ul>
-                <li>"Kayaking and watching fins come out of the water towards me. It turned out to be a dolphin!" - Dustin
+                <li>"Kayaking and watching fins come out of the water towards me. It turned out to be a dolphin!" -
+                    Dustin
                 </li>
                 <li>“FREAKING DOLPHINS.” -Kailee</li>
                 <li>“The views were pretty and coming back to shore was fun but every thing else sucked.” -Kelsie</li>
@@ -146,7 +147,7 @@
 
         <div class="box box13">
             <a href="https://lajolla.com/article/la-jolla-tide-pools-complete-guide/" target="_blank">
-                <img src="../portfolio/Assets/tide.JPG" alt="Tide Pools" class="center">
+                <img class="smaller-image" src="../portfolio/Assets/tide.JPG" alt="Tide Pools">
             </a>
         </div>
 
@@ -174,7 +175,7 @@
 
         <div class="box box17">
             <a href="https://www.belmontpark.com/" target="_blank">
-                <img src="../portfolio/Assets/belmont.JPG" alt="Belmont" class="center">
+                <img class="smaller-image" src="../portfolio/Assets/belmont.JPG" alt="Belmont">
             </a>
         </div>
 
@@ -188,14 +189,7 @@
         </div>
 
 
-
-
-
-
-
     </div>
-
-
 
 
 
