--- a/fun.html
+++ b/fun.html
@@ -62,8 +62,8 @@
         <div class="box box3">
             <h4>San Diego Zoo</h4>
             <ul>
-                <li>“There is so many amazing and different animals at the San Diego Zoo that’s why I love it and I also
-                    like riding on the top of the double decker bus there.” -Kelsie </li>
+                <li>“There are so many amazing and different animals at the San Diego Zoo that’s why I love it and I
+                    also like riding on the top of the double decker bus there.” -Kelsie </li>
                 <li>“Seeing the jaguar.” -Kailee </li>
                 <li>“The baby hippo and pandas were so adorable! Inside look and early morning tours are worth every
                     penny.” -Lindsie </li>
@@ -103,8 +103,10 @@
         <div class="box box7">
             <h4>USS Midway</h4>
             <ul>
-                <li>“My favorite thing there was learning about all the cool military things they had but watching top
-                    gun was cool too.” -Kelsie </li>
+                <li>“My favorite thing there was learning about all the cool military things they had but watching Top
+                    Gun was cool too.” -Kelsie </li>
+                <li>"I loved going aboard the USS Midway to see the workings of the giant ship. Watching Top Gun on the
+                    huge screen on the deck of the ship was super cool!" -Joni</li>
             </ul>
         </div>
 
